--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@cnrdh/mwc-pwa-auth",
-  "version": "0.1.0",
-  "homepage": "https://vercel.app/",
+  "version": "0.1.0-pre",
+  "homepage": "https://mwc-pwa-auth.vercel.app/",
   "main": "./mwc-pwa-auth/define.js",
+  "module": "./mwc-pwa-auth/define.js",
   "author": "Conrad Helgeland",
   "license": "MIT",
   "dependencies": {
